crates/cox-tui/src/snapshots/cox_tui__view__tests__help_overlay_snapshot.snap
---
source: crates/cox-tui/src/view.rs
expression: "buffer_to_string(&render(&state, 80, 15))"
---
 keys · Esc or ? closes
 idle
   Enter send · Shift+Tab mode cycle · @ file · / command · ? help
   Shift+Enter newline · Alt+Enter newline · Ctrl+Enter newline · Ctrl+R history
   Ctrl+T thinking · Ctrl+O transcript · Ctrl+E expand · Ctrl+G diff
   Ctrl+K plugin leader · Ctrl+C quit · Ctrl+D quit · y copy · Shift+Y copy all
 running
   Esc interrupt · Ctrl+C interrupt · Ctrl+B background · Ctrl+O transcript
   Alt+Enter send now · Ctrl+Enter send now · Ctrl+U unqueue
 modal
   Enter choose · Esc close · Up previous · Down next · Ctrl+E theme edit
 overlay
   Esc close · ? close · PageUp scroll up · PageDown scroll down
> Esc close · PageUp scroll up · PageDown scroll down
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · [default]
