crates/cox-tui/src/snapshots/cox_tui__view__tests__placeholder_hints_follow_context.snap
---
source: crates/cox-tui/src/view.rs
expression: "format!(\"{idle}\\n---\\n{running}\")"
---


> Enter send · Tab mode cycle · @ file · / command · ? help
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · 0 tasks · [default]
---


> Esc interrupt · Ctrl+B background · Ctrl+O transcript · Alt+Enter send now
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · [default] · working
