crates/cox-tui/src/snapshots/cox_tui__view__tests__plugin_panel_open_and_closed.snap
---
source: crates/cox-tui/src/view.rs
expression: "format!(\"{closed}\\n---\\n{open}\")"
---








> Enter send · Shift+Tab mode cycle · @
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
---

panel text






> Enter send · Shift+Tab mode cycle · @
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
