crates/cox-tui/src/snapshots/cox_tui__view__tests__queue_renders_above_composer.snap
---
source: crates/cox-tui/src/view.rs
assertion_line: 200
expression: buffer_to_string(&buf)
---




 ⏸ first message
 ⏸ second message
>  message · @ file · / command
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default] ·
